# codex-go

./: .gitignore  CONTRIBUTING.md
.cargo/: config.local-windows-build.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: pr-build.yml  release-assets.yml
CodexX/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_EN.md  index.json
CodexX/.github/ISSUE_TEMPLATE/: bug_report.yml
CodexX/.github/workflows/: pr-build.yml  release-assets.yml
CodexX/apps/codexx-launcher/: Cargo.toml  app-icon.rc  build.rs
CodexX/apps/codexx-launcher/src/: main.rs
CodexX/apps/codexx-manager/: package-lock.json  package.json
CodexX/apps/codexx-manager/src/: App.tsx  brand.ts  presets.ts  styles.css
CodexX/apps/codexx-manager/src-tauri/: Cargo.toml  tauri.conf.json
CodexX/apps/codexx-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
CodexX/apps/codexx-manager/src-tauri/tests/: windows_subsystem.rs
CodexX/assets/inject/: renderer-inject.js
CodexX/docs/plan/: 20260527160751519_聚合API供应商轮转实施计划.md
CodexX/docs/release/: 20260602191421483_token统计历史恢复bridge发布说明.md
CodexX/scripts/: codex-daily-token-usage.js  codex-token-usage.js  hide-usage-alert.js
apps/codexx-launcher/: build.rs
apps/codexx-launcher/src/: main.rs
apps/codexx-manager/: index.html  package.json
apps/codexx-manager/src/: App.tsx  styles.css
apps/codexx-manager/src-tauri/: Cargo.toml
apps/codexx-manager/src-tauri/capabilities/: default.json
apps/codexx-manager/src-tauri/src/: main.rs
apps/codexx-manager/src-tauri/tests/: windows_subsystem.rs
assets/inject/: renderer-inject.js
crates/codexx-core/: Cargo.toml
crates/codexx-core/src/: assets.rs  brand.rs  cli_wrapper.rs  lib.rs  model_catalog.rs  ports.rs  relay_config.rs  script_market.rs  settings.rs  update.rs  windows_integration.rs  zed_remote.rs
crates/codexx-core/tests/: cdp_bridge.rs  launcher.rs  protocol_proxy.rs  relay_config.rs  relay_rotation.rs  updater.rs
crates/codexx-data/: Cargo.toml
crates/codexx-data/src/: markdown.rs  storage.rs
crates/codexx-data/tests/: markdown.rs  provider_sync.rs  storage_adapter.rs
scripts/: codex-context-ring-restore.js  codex-context-used-meter.js  codex-list-pagebuster.js  codex-zhcn-translate.js
scripts/installer/macos/: package-dmg.sh
(+31 files in other folders)
