[package]
name = "codexx-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codexgo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
codexx-core = { path = "../../crates/codexx-core" }
codexx-data = { path = "../../crates/codexx-data" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
