[package]
name = "codexx-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "codexx_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codexgo-manager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
codexx-core = { path = "../../../crates/codexx-core" }
codexx-data = { path = "../../../crates/codexx-data" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["custom-protocol", "image-ico", "image-png", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
